@@ -1,3 +1,5 @@
+24.mar (ws)
+      - fix initialization of split-window action
 23.mar (ws)
       - new commands: "split measure" and "join measure"
 22.mar (ws)
